--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,12 @@
+html {
+  height: 100%;
+}
+
 body {
   display: flex;
   flex-direction: row;
   font-family: 'Segoe UI', 'Helvetica', sans-serif;
+  height: 100%;
 }
 
 /* The navigation menu links */
@@ -24,8 +29,12 @@ body {
 
 /* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+  .sidenav {
+    padding-top: 15px;
+  }
+  .sidenav a {
+    font-size: 18px;
+  }
 }
 
 #reload {
@@ -33,25 +42,18 @@ body {
   color: black;
 }
 
-.sidenav > div:hover {
-  background-color: #cecef6;
-  cursor: pointer;
-}
-
 .flex-container {
   display: flex;
   width: 100%;
-  height: 1000px;
+  height: 100%;
 }
 
 .graphStyle {
   flex: 0.5;
-  border: 2px solid yellow;
 }
 
 .treeStyle {
   flex: 0.5;
-  border: 2px solid yellow;
 }
 
 .graphSvg {
@@ -64,7 +66,7 @@ body {
   width: 100%;
 }
 .node {
-  fill:#1a7532
+  fill: #1a7532;
 }
 
 .link {
@@ -73,6 +75,7 @@ body {
 }
 
 .label {
+  pointer-events: none;
   font-size: 8px;
   fill: white;
   font-weight: 1000;
@@ -81,6 +84,18 @@ body {
 .sidenav {
   flex-shrink: 0;
   background-color: #eee;
+  text-align: center;
   overflow-x: hidden;
 }
 
+#arrows {
+  font-size: 25px;
+}
+
+.sidenav button:hover {
+  cursor: pointer;
+}
+
+.sidenav span:hover {
+  cursor: pointer;
+}
