--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,7 +71,7 @@ body {
 
 .link {
   stroke: #333;
-  stroke-width: 2px;
+  stroke-width: 1.5px;
 }
 
 .label {
@@ -98,4 +98,30 @@ body {
 
 .sidenav span:hover {
   cursor: pointer;
+}
+
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #3498db; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.hidden > div {
+  display: none;
+}
+
+.visible > div {
+  display: block;
 }
