--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,7 +37,7 @@ body {
   }
 }
 
-#reload {
+#reloadRandomGraph {
   font-size: 50px;
   color: black;
 }
@@ -45,7 +45,7 @@ body {
 .flex-container {
   display: flex;
   width: 100%;
-  height: 100%;
+  height: 1000px;
 }
 
 .graphStyle {
@@ -61,23 +61,29 @@ body {
   width: 100%;
 }
 
+.drawGraphSvg {
+  height: 100%;
+  width: 100%;
+}
+
 .treeSvg {
   height: 100%;
   width: 100%;
 }
 .node {
+  cursor: grabbing;
   fill: #1a7532;
 }
 
 .link {
   stroke: #333;
   stroke-width: 1.5px;
-}
+} 
 
 .label {
   pointer-events: none;
   font-size: 8px;
-  fill: white;
+  fill: black;
   font-weight: 1000;
 }
 
@@ -124,4 +130,54 @@ body {
 
 .visible > div {
   display: block;
+} 
+
+text {
+  font-family: sans-serif;
+  font-size: 10px;
+}
+
+path.link {
+  fill: #fcba03;
+  stroke: #fcba03;
+  stroke-width: 8px;
+  cursor: default;
+}
+
+path.link.dragline {
+  pointer-events: none;
+}
+
+path.link.hidden {
+  stroke-width: 0;
+}
+
+svg {
+  border: 1px solid grey;
+}
+
+line {
+  stroke: steelblue;
+  stroke-width: 2px;
+  stroke-linecap: round;
+}
+
+.drag_line {
+  stroke: 	#FF0000;
+  stroke-width: 5;
+  pointer-events: none;
+}
+
+.drag_line_hidden {
+  stroke-width: 0;
+}
+
+.link {
+  stroke: #595;
+  stroke-width: 5;
+  cursor: crosshair;
+}
+
+.link_selected {
+  stroke: #ff7f0e;
 }
