--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,6 +2,11 @@ html {
   height: 100%;
   padding: 0;
   margin: 0;
+  user-select: none; /* supported by Chrome and Opera */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
 }
 
 body {
