--- a/public/css/style.css
+++ b/public/css/style.css
@@ -252,7 +252,7 @@ text {
   pointer-events: none;
 }
 
-path.link {
+/* path.link {
   fill: #fcba03;
   stroke: #fcba03;
   stroke-width: 8px;
@@ -266,7 +266,7 @@ path.link.dragline {
 path.link.hidden {
   stroke-width: 0;
 }
-
+ */
 .drag_line {
   stroke: 	#FF0000;
   stroke-width: 5;
@@ -301,13 +301,20 @@ path.link.hidden {
 
 .niceTreeDecompositionNode {
   fill: #3483eb;
+  stroke: black;
+  stroke-width: 3px;
 }
 
-line {
-  stroke: rgb(128, 128, 128);
-  stroke-width: 2.5px;
+.link {
+  stroke: black;
+  stroke-width: 3px;
   stroke-linecap: round;
-} 
+}
+
+.highlighted-link {
+  stroke: orange;
+  stroke-width: 5px;
+}
 
 .label {
   pointer-events: none;
