--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,173 +1,21 @@
 html {
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  user-select: none; /* supported by Chrome and Opera */
+  height:100%;
 }
 
 body {
-  /* display: flex; */
-  /* flex-direction: row; */
-  /* text-align: center; */
+  min-height: 100%;
+  margin: 0;
+  overflow: hidden;
   font-family: 'Inter', sans-serif;
   height:100vh;
   padding: 0;
   margin: 0;
-}
-
-/* Sidenav */
-.sidenav {
-  /* flex-shrink: 0; */
-  flex-direction: column;
-  background-color: #161e2e;
-  color: white;
-  text-align: center;
-  /* overflow-x: hidden; */
-}
-
-.sidenav a {
-  padding: 6px 8px 6px 16px;
-  text-decoration: none;
-  font-size: 25px;
-  color: white;
-  display: block;
-}
-
-.sidenav p {
-  color:white;
-  font-size: 13px;
-  font-weight: 600;
-}
-
-.sidenav span:hover {
-  cursor: pointer;
-  background-color: tomato;
-  transition: background-color .3s;
-}
-
-.fileUpload {
-  position: relative;
-  overflow: hidden;
-  margin: 10px;
-}
-
-.fileUpload input.upload {
-  position: absolute;
-  top: 0;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  font-size: 20px;
-  cursor: pointer;
-  opacity: 0;
-  filter: alpha(opacity=0);
-}
-
-.btn {
-  padding: 10px;
-  border: solid 2px white;
-}
-
-.step1 {
-  background-color: #212d45;
-  padding: 20px;
-}
-
-.step2 {
-  background-color: #212d45;
-  padding: 20px;
-}
-
-.step3 {
-  background-color: #212d45;
-  padding: 20px;
-}
-
-#compute:hover, #computeNiceTree:hover, #bfs:hover, #mis:hover, #three-color:hover, #max-independent-set:hover {
-  cursor: pointer;
-  background: tomato;
-  transition: background-color .3s;
-}
-
-#3color:hover {
-  cursor: pointer;
-  background: tomato;
-  transition: background-color .3s;
-}
-
-
-#reloadRandomGraph {
-  font-size: 40px;
-  color: white;
-}
-
-.reload-container {
-  display: flex;
-  align-items: center;
-  padding: 20px;
-}
-
-.draw-graph-container {
-  display: flex;
-  align-items: center;
-  padding: 20px;
-}
-
-.hoverable:hover {
-  background-color: tomato;
-  cursor: pointer;
-  transition: background-color .2s;
-}
-
-.buttons {
-  font-size: 14px;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-.buttons p {
-  padding: 10px;
-}
-
-.random-style {
-  font-family: 'Inter', sans-serif;
-  font-weight: 700;
-}
-
-.number-of-vertices {
-  display: flex;
-  align-items: center;
-  user-select: none;
-}
-
-.number-of-links {
-  user-select: none;
-  display: flex;
-  align-items: center;
-}
-
-.random-generator {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.random-generator input, textarea {
-  font    : .9em/1.5em "handwriting", 'Inter';
-  border  : none;
-  padding : 0px;
-  margin  : 0;
-  width   : 30px;
-  background: none;
-  color: white;
-  font-weight: 600; 
-  font-size: x-large; 
-  text-align: center; 
+  color: #333333;
 }
 
 .flex-container {
   display: flex;
-  height: 100%;
+  height: 90%;
   width: 100%;
   justify-content: center;
 }
@@ -177,38 +25,39 @@ body {
   padding: 0px;
   display: flex;
   height: 100%;
-  flex: 0.6;
+  flex: 0.7;
 }
 
 #left-container {
-  flex: 0.6;
+  flex: 0.55;
+  justify-content: center;
   align-items: center;
-  display: flex;
+  margin: 10px 10px 10px 10px;
+  height: 90%;
 }
 
 #right-container {
-  flex: 0.4;
+  flex: 0.45;
+  border: solid 1px lightgray;
+  height: 90%;
+  margin: 10px 10px 10px 10px;
 }
 
 #graph-svg-container {
-  display: flex;
-  width: 100%;
-  height: 35%;
-  border: solid 5px steelblue;
+  height: 45%;
+  border: solid 1px lightgray;
+  cursor: crosshair;
 }
 
 #td-container {
+  display: flex;
+  height: 55%;
+  justify-content: center;
+}
+
+#nice-td-container {
   width: 100%;
   height: 100%;
-}
-
-.drawGraphSvg {
-  height: 50%;
-  width: 100%;
-}
-
-.material-icons.md-36 { 
-  font-size: 30px;
 }
 
 .loader {
@@ -237,68 +86,50 @@ body {
   display: block;
 }
 
-.drag_line {
-  stroke: 	#FF0000;
-  stroke-width: 5;
-  pointer-events: none;
+.dragLine.hidden {
+  stroke-width: 0;
 }
 
-.drag_line_hidden {
-  stroke-width: 5px;
-}
-
-.table {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 20px;
-  margin-top: 20px;
-
-}
-
-/* Node styling */
-.node {
-  fill: rgb(238, 238, 238);
-  stroke: rgb(51, 51, 51);
+.dragLine {
+  stroke: #333;
   stroke-width: 3px;
-}
-
-/* Link styling */
-.link {
-  stroke: rgb(51, 51, 51);
-  stroke-width: 3;
-} 
-
-.label {
-  fill: rgb(51, 51, 51);
-  font-family: "PT Sans", sans-serif;
-  font-size: 16;
-  font-weight: bold;
-  text-anchor: middle;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: rgb(51, 51, 51);
+  display: flex;
+  flex-shrink: 0;
+  height: 50px;
+  align-items: center;
+  justify-self: center;
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
-.topnav a {
+.topnav div {
   float: left;
-  display: block;
+  /* display: block; */
+  display: flex;
+  align-items: center;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 0px 20px;
   text-decoration: none;
-  font-size: 13px;
+  font-size: 14px;
+  cursor: pointer;
+  height: 100%;
 }
 
-/* Add an active class to highlight the current page */
-.active {
+.topnav div:hover {
+  background-color: #4CAF50;
+}
+
+.project-title {
+  height: 100%;
   background-color: #4CAF50;
   color: white;
 }
+
 
 /* Hide the link that should open and close the topnav on small screens */
 .topnav .icon {
@@ -391,4 +222,94 @@ body {
     width: 100%;
     text-align: left;
   }
+}
+
+g.text:hover {
+  font-size: 50px;
+}
+
+#app-interface {
+  width: 60%;
+  padding: 10px;
+}
+
+.error-messages {
+  color: red;
+  text-align: center;
+}
+
+/* Node styling */
+
+/* Link styling */
+.link {
+  stroke: rgb(51, 51, 51);
+  stroke-width: 3;
+}
+
+.highlighted-link {
+  stroke: orange;
+}
+
+.link:hover {
+  stroke: orange;
+  cursor: pointer;
+}
+
+.label {
+  fill: rgb(51, 51, 51);
+  font-family: "PT Sans", sans-serif;
+  font-size: 16;
+  font-weight: bold;
+  text-anchor: middle;
+  pointer-events: none;
+  user-select: none;
+}
+
+.node {
+  fill: rgb(238, 238, 238);
+  stroke: rgb(51, 51, 51);
+  stroke-width: 3px;
+}
+
+.highlighted-node {
+  fill: orange;
+  stroke: orange;
+}
+
+.node:hover {
+  stroke: orange;
+  fill: orange;
+  cursor: pointer;
+}
+
+.highlighted-text {
+  fill: white;
+}
+
+
+.table {
+  margin: auto;
+  width: 50%;
+  border: 1px solid lightgray;
+  padding: 20px;
+  margin-top: 20px;
+
+}
+
+
+#control-keys {
+  display: flex;
+  height: 10%;
+  justify-content: center;
+}
+
+.material-icons.md-48 { 
+  font-size: 48px;
+  margin-bottom: 20px;
+  cursor: pointer;
+  user-select: none;
+}
+
+.material-icons.md-48:hover { 
+  color: orange;
 }
