--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,6 +11,7 @@ body {
   padding: 0;
   margin: 0;
   color: #333333;
+  /* pointer-events: none; */
 }
 
 .flex-container {
@@ -24,8 +25,9 @@ body {
   overflow: hidden;
   padding: 0px;
   display: flex;
+  flex: .8;
   height: 100%;
-  flex: 0.7;
+  /* flex: 0.7; */
 }
 
 #left-container {
@@ -38,20 +40,20 @@ body {
 
 #right-container {
   flex: 0.45;
-  border: solid 1px lightgray;
+  /* border: solid 1px lightgray; */
   height: 90%;
   margin: 10px 10px 10px 10px;
 }
 
 #graph-svg-container {
-  height: 45%;
+  height: 50%;
   border: solid 1px lightgray;
   cursor: crosshair;
 }
 
 #td-container {
   display: flex;
-  height: 55%;
+  height: 50%;
   justify-content: center;
 }
 
@@ -118,6 +120,7 @@ body {
   font-size: 14px;
   cursor: pointer;
   height: 100%;
+  user-select: none;
 }
 
 .topnav div:hover {
@@ -250,10 +253,10 @@ g.text:hover {
   stroke: orange;
 }
 
-.link:hover {
+/* .link:hover {
   stroke: orange;
   cursor: pointer;
-}
+} */
 
 .label {
   fill: rgb(51, 51, 51);
@@ -274,13 +277,14 @@ g.text:hover {
 .highlighted-node {
   fill: orange;
   stroke: orange;
+  cursor: pointer;
 }
 
-.node:hover {
+/* .node:hover {
   stroke: orange;
   fill: orange;
   cursor: pointer;
-}
+} */
 
 .highlighted-text {
   fill: white;
@@ -294,6 +298,10 @@ g.text:hover {
   padding: 20px;
   margin-top: 20px;
 
+}
+
+.table td {
+  padding:0 25px;
 }
 
 
@@ -312,4 +320,30 @@ g.text:hover {
 
 .material-icons.md-48:hover { 
   color: orange;
+}
+
+.red {
+  color: red;
+} 
+
+.green {
+  color: green;
+} 
+
+.blue {
+  color: blue;
+} 
+
+.sets:hover {
+  cursor: pointer;
+  background-color: orange;
+  user-select: none;
+}
+
+td {
+  user-select: none;
+}
+
+.highlighted-stroke {
+  stroke: blue;
 }
