--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,7 +33,7 @@ body {
 
 #left-container {
   flex: 0.3;
-  height: 100%;
+  height: 95%;
 }
 
 #middle-container {
@@ -585,6 +585,7 @@ td {
 .theory-content {
   padding: 30px;
   line-height: 1.6;
+  overflow-y: auto;
 }
 
 div.tooltip {
@@ -645,6 +646,7 @@ div.tooltip {
 .exercise-title:hover {
   color: orange;
   cursor: pointer;
+  text-decoration: underline;
 }
 
 .separating-node {
@@ -659,6 +661,7 @@ div.tooltip {
 
 .exercise-result {
   margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .correct-answer {
@@ -669,4 +672,62 @@ div.tooltip {
 .wrong-answer {
   vertical-align: middle;
   color: red;
+}
+
+.some-math {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px;
+ /* justify-content: space-between; */
+  /* display: inline; */
+  /* text-align: center; */
+}
+
+.separator-exercises-info {
+  font-style: italic;
+  opacity: 90%;
+  font-size: 14px;
+  background-color: lightblue;
+  padding: 10px;
+}
+
+.hint {
+  font-style: italic;
+  opacity: 90%;
+  font-size: 14px;
+  background-color: lightsalmon;
+  padding: 10px;
+}
+
+.hint-content {
+  font-size: 14px;
+  background-color: lightsalmon;
+  padding: 10px;
+}
+
+.hint:hover {
+  color: white;
+  cursor: pointer;
+}
+
+.tree-width-container {
+  display: flex;
+  flex-direction: column;
+  background-color: lightsalmon;
+  height: 100%;
+  width: 400px;
+}
+
+.tw-graph {
+  flex: 1;
+  background-color: lightseagreen;
+}
+
+.button {
+  text-decoration: underline;
+}
+
+.button:hover {
+  color: orange;
+  cursor: pointer;
 }
